--- a/src/modules/home-page/point-modal/point-modal.scss
+++ b/src/modules/home-page/point-modal/point-modal.scss
@@ -14,21 +14,37 @@
 }
 
 .modalInner {
+  position: relative;
   display: flex;
   align-items: center;
-  flex-direction: column;
   width: 300px;
-  height: 500px;
+  height: 550px;
   padding-top: 30px;
   padding-left: 30px;
   padding-right: 30px;
+  flex-direction: column;
   border-radius: 10%;
   background-color: #f44336;
 }
 
+.mapIcon {
+  position: absolute !important;
+  top: 25px;
+  right: 25px;
+  width: 25px !important;
+  height: 25px !important;
+  cursor: pointer !important;
+}
+
 .modalTitle {
+  display: -webkit-box;
+  max-width: 90%;
   font-size: 24px;
   color: white;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 3; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .images {
